# ESE-519-FINAL-PROJECT-Penn-Dinosaurs

./: ESE 519 Short PPt.pptx
code/: README.md
code/Dino_Game_Code_RP2040/: CMakeLists.txt  dino.c  gameover.h  jump.h  pwmsnd.c  pwmsnd.h  vga_graphics.c
code/Face_Tracking_Pan_Tilt/: face_new_main.py
code/Human Interaction Interface/: code.py
